--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <h1>i was changing a new heading</h1>
     <div class="container-full">
         <div class="half-width">
             <nav>
